first lesson practice

--- a/test.html
+++ b/test.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title> Code test </title>
+    </head>
+    <body>
     <h1> Hello World </h1>
+    <br>
+    <br>
+    <br>
+    <h2> this is the space</h2>
+    <br>
+    <br>
     <h2> this is great</h2>
     <h3> i am doing this</h3>
-
+    <p>I hope this email finds you well. I have signed up and enrolled for the full-stack bootcamp, and alhamdulillah we started that yesterday.<br><br>
+          I have previously expressed my interest in wanting to do boh the freelancing and full stack courses together, 
+          however I was slightly confused as to how I could do these together or how you would make it a joined bootcamp amongst the three options.<br><br>
+          Could I please also enroll for the freelancing course as well? Do let me know what I need to do in order to get started with the freelancing course. Many thanks.</p>
 
 
 </html>
